# biomodels-client

./: .gitignore  LICENSE  pyproject.toml  readme.md
.github/workflows/: python-publish.yml
examples/api_reference/: all_endpoints.py
examples/wearable_to_trimp/: 01_import_apple_health.py  02_inspect_sensor_store.py  03_sensor_to_trimp.py  04_submit_trimp.py
src/biomodels_client/: client.py  database.py  fixtures.py
src/biomodels_client/importers/: apple_health.py
