[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "biomodels-client"
version = "0.1.0"
description = "Python client and import tools for the BioModelle API"
requires-python = ">=3.9"
dependencies = [
    "requests",
    "numpy",
]

[tool.setuptools.packages.find]
where = ["src"]